--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "**CSCI 167: Randomized Algorithms for Data Science**"
+title: "**Randomized Algorithms for Data Science**"
 output:
   html_document:
     css: styles.css
