update homepage and syllabus

--- a/index.qmd
+++ b/index.qmd
@@ -27,7 +27,7 @@ output:
 
   **Quizzes**: There will be short quizzes at the beginning of (randomly) selected classes. These quizzes will test your understanding of the problem sets and the concepts from the prior week.
 
-  **Exams**: The two exams are the primary method of assessing your understanding of the material. Neither exam is cumulative.
+  **Exams**: The two midterm exams are the primary method of assessing your understanding of the material.
 
   **Project**: The  project offers a chance to explore an area that interests you, practice writing high quality code, and develop your ability to communicate technical ideas to an audience. 
 
