--- a/index.qmd
+++ b/index.qmd
@@ -60,7 +60,7 @@ output:
     <td>Week 2 (1/27 and 1/29)</td>
     <td><a href="notes/01_set_size.html">Set Size Estimation</a></td>
     <td><a href="notes/02_frequent_items.html">Frequent Items</a></td>
-    <td></td>
+    <td><a href="slides/Week02.pdf">Slides</a></td>
     <td><a href="https://colab.research.google.com/drive/1gaNqPQmEDnXKQVemAYGs1sATgQe2xpHK?usp=sharing">Problem 2</a></td>
   </tr>
   <tr>
