--- a/notes/03_distinct_elements.qmd
+++ b/notes/03_distinct_elements.qmd
@@ -32,7 +32,10 @@ While Chebyshev's gives a more general bound, it also needs a bound on the varia
 
 Note: There's no hard rule for which to apply! Both Markov's and Chebyshev's are useful in different settings.
 
-**Proof of Chebyshev's Inequality:** We'll apply Markov's inequality to the non-negative random variable $S = (X - \mathbb{E}[X])^2$.
+::: {.proof-block}
+<details closed>
+<summary>Proof of Chebyshev's Inequality</summary>
+We'll apply Markov's inequality to the non-negative random variable $S = (X - \mathbb{E}[X])^2$.
 By Markov's,
 $$
 \Pr\left(S \geq t \right) \leq \frac{\mathbb{E}[S]}{t}.
@@ -50,6 +53,8 @@ Then simplifying
 $$
 \Pr\left(|X - \mathbb{E}[X]| \geq k \sigma\right) \leq \frac{1}{k^2}.
 $$
+</details>
+:::
 
 ## Linearity of Variance
 In order to use Chebyshev's inequality, we need to bound the variance.
@@ -169,7 +174,11 @@ But the reason behind the exact estimate is that
 
 We'll see two proofs.
 
-**Calculus Proof:** We'll use the identity that 
+::: {.proof-block}
+<details closed>
+<summary>Calculus Proof</summary>
+
+We'll use the identity that 
 $$
 \mathbb{E}[X] = \int \Pr(X \geq x) dx
 $$
@@ -191,6 +200,8 @@ $$
 $$
 In the second equality, we used the observation that the minimum $S$
 is greater than a value $s$ if and only if all $D$ hashed values are greater than $s$.
+</details>
+:::
 
 We can understand every step of the calculus proof but it doesn't give
 us a deeper understanding for *why* the lemma is true.
@@ -199,7 +210,10 @@ This phrase comes from
 Paul Erd&odblac;s, a prolific Hungarian mathematician, who believed that
 there are proofs so simple and elegant that they were written in a divine book.
 
-**Proof from the Book:**
+::: {.proof-block}
+<details closed>
+<summary>Proof from the Book</summary>
+
 We'll use the following observation:
 For any event $A$ and random variable $x$,
 \begin{align}
@@ -232,6 +246,9 @@ Now we can compute the expectation of $S$:
 The first equality follows by our alternative definition of $S$,
 the second equality follows by the first observation in the proof,
 the final equality follows because each $h_i$ is equally likely to be the minimum of all $D+1$.
+
+</details>
+:::
 
 <!--
 Consider a particular set of hashed values $h_1, \ldots, h_D$.
@@ -267,7 +284,12 @@ We know $\mathbb{E}[S]$ but we don't yet know $\mathbb{E}[S^2]$.
 
 **Lemma:** $\mathbb{E}[S^2] = \frac{2}{(D+1)(D+2)}$.
 
-**Calculus Proof:**
+We'll again see two proofs.
+
+::: {.proof-block}
+<details closed>
+<summary>Calculus Proof</summary>
+
 Using a calculus proof similar to the one for the expectation, we know
 $$
 \mathbb{E}[S^2] = \int_{s=0}^1 \Pr(S^2 \geq s) ds
@@ -279,9 +301,15 @@ $$
 \frac{2}{(D+1)(D+2)}.
 $$
 
+</details>
+:::
+
 Again, the calculus proof is correct but it doesn't give us a deeper understanding.
 
-**Proof from the Book:**
+::: {.proof-block}
+<details closed>
+<summary>Proof from the Book</summary>
+
 We can apply the same machinery that we used in the prior proof from the book.
 The key observation now is that $S^2$ is the probability that the next *two* hashed values are both less than the minimum of the first $D$ hashed values.
 Formally,
@@ -298,6 +326,9 @@ Using the same analysis from the prior proof from the book, we know that
 &= \Pr_{h_1, \ldots, h_{D+2}}(\max(h_{D+1}, h_{D+2}) \leq \min(h_1, \ldots, h_D)) \\
 &= \frac{2}{(D+1)(D+2)}.
 \end{align}
+
+</details>
+:::
 
 <!--
 Consider a particular set of hashed values $h_1, \ldots, h_D$.
