--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -35,7 +35,7 @@ The two exams will be in-person, and cover the material from the first and secon
 The final project will be a chance for you to apply the concepts we have covered in class to a real-world problem. You will select a topic we cover in class and implement an algorithm we discussed on a data set of your choosing. You will write a report describing your results and what you learned. You will also give a presentation showcasing your results to the class. Except in special circumstances, you will complete your project as an individual. 
 
 - **Extra Credit:**
-My typed notes are work in progress, and I would love your help improving them! If you find an issue in the notes *on the day of the lecture or later*, please open an issue on the [repo](https://github.com/rtealwitter/rads2026). I will give extra credit to the first person to correct each typo (worth 1/4 point), and mistake (worth 1/2 point).
+My typed notes are work in progress, and I would love your help improving them! If you find an issue in the notes *after the class or later*, please open an issue on the [repo](https://github.com/rtealwitter/rads2026). I will give extra credit to the first person to correct each typo (worth 1/4 point), and mistake (worth 1/2 point).
 
 **Late Policy:**
 Most assignments will have a no-questions-asked late policy of 24 hours (refer to Gradescope for details on each specific assignment). I will not accept assignments more than 24 hours late.
