--- a/index.qmd
+++ b/index.qmd
@@ -75,7 +75,7 @@ output:
     <td><a href="notes/04_load_balancing.html">Load Balancing</a></td>
     <td><a href="notes/04_load_balancing.html">Load Balancing</a></td>
     <td><a href="slides/Week04.pdf">Slides</a></td>
-    <td></td>
+    <td><a href="https://colab.research.google.com/drive/1oTX14kBIP2e7m95LHlsqStddT8FTAzKY?usp=sharing">Problem 6</a>, <a href="https://colab.research.google.com/drive/1ciQVopHz3Cb9xFEL5UnwU49hLGCGxnF_?usp=sharing">Problem 7</a></td>
   </tr>
   <tr>
     <td>Week 5 (2/17 and 2/19)</td>
